Further fix indicator image size in small viewport
The original size was a little too large, compressing the modpack image. This size is about exactly the same as in a larger viewport in relativity.

--- a/raptorWeb/static/css/raptormc.scss
+++ b/raptorWeb/static/css/raptormc.scss
@@ -210,7 +210,7 @@ body {
 
     .indicatorImage {
 
-        width: 40%;
+        width: 30%;
 
     }
     
